[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menus/Pre-Menu.gd" type="Script" id=1]
[ext_resource path="res://Menus/BG.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/OldSansBlack.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Titulo.png" type="Texture" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player.png" type="Texture" id=6]
[ext_resource path="res://Assets/RedPlayer.png" type="Texture" id=7]

[sub_resource type="Theme" id=3]


[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Font/fallback", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="Pre-Menu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 23.0
margin_top = 7.0
margin_right = 1049.0
margin_bottom = 684.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="BG" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 1.90735e-06, -1 )

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 346.0
margin_top = 308.0
margin_right = 689.0
margin_bottom = 416.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 3 )
popup_exclusive = false
window_title = "Aviso"
resizable = false
dialog_text = "Tem certeza?"
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog", "Popup", "Theme" ]

[node name="newGame" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 396.0
margin_top = 429.0
margin_right = 603.0
margin_bottom = 472.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Label" type="Label" parent="newGame" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 17.0
margin_top = -4.0
margin_right = 214.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.857071, 0.96, 0.92, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.519333 )
custom_constants/shadow_offset_x = 3
text = "Novo Jogo"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="continue" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 333.0
margin_top = 508.0
margin_right = 673.0
margin_bottom = 547.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Grow Direction", "Margin", "Rect" ]

[node name="Label" type="Label" parent="continue" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 41.0
margin_top = -7.0
margin_right = 328.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.857071, 0.96, 0.92, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.519333 )
custom_constants/shadow_offset_x = 3
text = "Continuar"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="exit" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 436.0
margin_top = 591.0
margin_right = 568.0
margin_bottom = 629.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Label" type="Label" parent="exit" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -73.0
margin_top = -9.0
margin_right = 214.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.857071, 0.96, 0.92, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.519333 )
custom_constants/shadow_offset_x = 3
text = "Sair"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Control" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -9.0
margin_right = 31.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="TÃ­tulo" type="Sprite" parent="Title" index="0"]

position = Vector2( 532.163, 174.381 )
scale = Vector2( 0.929272, 0.929272 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Espelho" type="Sprite" parent="Title" index="1"]

position = Vector2( 393.213, 333.421 )
rotation = -3.14159
scale = Vector2( 1.7, -1.7 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Player" type="Sprite" parent="Title" index="2"]

position = Vector2( 664.213, 348.421 )
rotation = -3.14159
scale = Vector2( 1.25, -1.25 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Player2" type="Sprite" parent="Title" index="3"]

self_modulate = Color( 1, 1, 1, 0.320431 )
position = Vector2( 395.213, 348.421 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility" ]

[node name="Save_window" type="Control" parent="." index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -562.0
margin_top = -51.0
margin_right = -522.0
margin_bottom = -11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Border" type="ColorRect" parent="Save_window" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 621.0
margin_top = 321.0
margin_right = 1525.0
margin_bottom = 681.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.176471, 0.27451, 0.290196, 1 )

[node name="Inside" type="ColorRect" parent="Save_window" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 644.0
margin_top = 337.0
margin_right = 1498.0
margin_bottom = 658.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.176471, 0.333333, 0.34902, 1 )

[node name="Slot1" type="Button" parent="Save_window" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 663.0
margin_top = 356.0
margin_right = 1025.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="Label1" type="Label" parent="Save_window/Slot1" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 12.0
margin_right = 602.0
margin_bottom = 90.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Jogador: 
Tempo jogado:
Mortes:
Fase atual:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Slot2" type="Button" parent="Save_window" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 664.0
margin_top = 494.0
margin_right = 1026.0
margin_bottom = 618.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="Label2" type="Label" parent="Save_window/Slot2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 12.0
margin_right = 602.0
margin_bottom = 90.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Jogador: 
Tempo jogado:
Mortes:
Fase atual:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Slot3" type="Button" parent="Save_window" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1039.0
margin_top = 356.0
margin_right = 1401.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="Label3" type="Label" parent="Save_window/Slot3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 12.0
margin_right = 602.0
margin_bottom = 90.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Jogador: 
Tempo jogado:
Mortes:
Fase atual:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Slot4" type="Button" parent="Save_window" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1040.0
margin_top = 496.0
margin_right = 1402.0
margin_bottom = 620.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="Label4" type="Label" parent="Save_window/Slot4" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 12.0
margin_right = 602.0
margin_bottom = 90.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Jogador: 
Tempo jogado:
Mortes:
Fase atual:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Name_entry" type="Control" parent="." index="7"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 63.0
margin_right = 160.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Border" type="ColorRect" parent="Name_entry" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 149.0
margin_top = 6.0
margin_right = 664.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.176471, 0.27451, 0.290196, 1 )

[node name="Inside" type="ColorRect" parent="Name_entry" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 165.0
margin_top = 23.0
margin_right = 645.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.176471, 0.333333, 0.34902, 1 )

[node name="LineEdit" type="LineEdit" parent="Name_entry" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 175.0
margin_top = 83.0
margin_right = 403.0
margin_bottom = 110.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="Label" type="Label" parent="Name_entry" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 238.0
margin_top = 28.0
margin_right = 382.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Insira seu nome:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]

[connection signal="mouse_entered" from="newGame" to="." method="_on_continue_mouse_entered"]

[connection signal="mouse_exited" from="newGame" to="." method="_on_continue_mouse_exited"]

[connection signal="pressed" from="newGame" to="." method="_on_continue_pressed"]

[connection signal="mouse_entered" from="continue" to="." method="_on_levelSelect_mouse_entered"]

[connection signal="mouse_exited" from="continue" to="." method="_on_levelSelect_mouse_exited"]

[connection signal="pressed" from="continue" to="." method="_on_levelSelect_pressed"]

[connection signal="mouse_entered" from="exit" to="." method="_on_exit_mouse_entered"]

[connection signal="mouse_exited" from="exit" to="." method="_on_exit_mouse_exited"]

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]

[connection signal="pressed" from="Save_window/Slot1" to="." method="_on_Slot1_pressed"]

[connection signal="pressed" from="Save_window/Slot2" to="." method="_on_Slot2_pressed"]

[connection signal="pressed" from="Save_window/Slot3" to="." method="_on_Slot3_pressed"]

[connection signal="pressed" from="Save_window/Slot4" to="." method="_on_Slot4_pressed"]

[connection signal="text_entered" from="Name_entry/LineEdit" to="." method="_on_LineEdit_text_entered"]


